^ Significantly improved speed of adding/removing of project items on large projects.
^ Significantly improved speed of undo/redo/paste operations on large projects (note for existing projects: 
  the patch will have an effect after manual expansion and collapsion of all form-based items in the object tree).
* Fixed python code generation for wx.EVT_LIST_ITEM_DESELECTED event (wxListCtrl).

08/27/2009 Version 3.01.64 (Beta)
* FS#389 - Center option for dialogs should be set to wxBOTH by default
* FS#391 - Change (some) user notifications from status bar to message box 

08/26/2009 Version 3.01.63 (Beta)
* Fixed code generation of wxGrid events in Python

08/19/2009 Version 3.01.62 (Beta)
+ Added support for wxSearchCtrl widget
+ Added support for wxAnimationCtrl widget
* Fixed code generation of system colors in Python
* FS#430 - Spacer code generation in Python is incomplete (no proportion param)
* FS#432 - Fatal error when resizing Object Properties
* Fixed tooltips' code generation in Python
* Sash position of wxSplitterWindow is set only if differs from -1

06/11/2009 Version 3.01.61 (Beta)
+ Added support for Python (wxPython) code generation
* FS#424 - No encoding declared
* FS#425 - ListBook: C++ code instead of Python code 

03/06/2009 Version 3.01.60 (Beta)
* Moved the 'event_handler' type to the Forms plug-in. This allows different 
  event handling methods to be used per Frame/Dialog/Panel. This makes it even
  easier to create Dialogs that don't need any inherited class to work.
* Removed the 'virtual_decl' 'event_handler' method because it seemed like hassle
  to get a linker error instead of a compiler error. It also cleans up the options
  a bit.

02/06/2009 Version 3.01.59 (Beta)
* FS#367 - Project-Properties: encoding is ignored. Fixed ANSII file generation - Loaden
* FS#357 - wxFB overrides file without confirmation from user. - hykwok
* FS#215 - Abstract or normal class generation. - c16